# srtmerger

./: .gitignore  README.md  pyproject.toml
srtmerger_cli/: __init__.py  main.py  merge_subs.py
