[project]
name = "srtmerger-cli"
version = "0.1.0"
description = "Fork of srtmerger with added cli support"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "chardet>=5.2.0",
    "click>=8.1.8",
    "loguru>=0.7.3",
]

[project.scripts]
merge-subs = "srtmerger_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.0.1",
    "ruff>=0.8.1",
]
tests = [
    "pytest>=8.3.4",
]
[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
#typeCheckingMode = "strict"
exclude = ["srtmerger_cli/main.py"]
#executionEnvironments = [
#    {"root" = "app", extraPaths = ["."], "reportUnusedImport" = false},    
#    {"root" = "tests", extraPaths = ["."], "reportMissingImports" = false, #"reportUntypedFunctionDecorator" = false, "reportUknownMemberType" = false},
#]

[tool.mypy]
disable_error_code = ["import-untyped"]
ignore_missing_imports = true
strict = true

#getting ready for mypy v2.0
disallow_subclassing_any = false
local_partial_types = true
strict_bytes = true
allow_redefinition = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "test*"
disallow_untyped_defs = false

[tool.ruff]
line-length = 120
respect-gitignore = true # default: true

[tool.ruff.lint]
#select = ["E", "F", "I", "FAST", "LOG"]
select = ["ALL",]
ignore = ["D", # docstrings
"ERA001", # commented-out code
"T20", # print and pprint found
"RET504", # unnecessary assignment before return
"F401", # Imported but unused
"N802", # Function name should be lowercase.
"EM101", # String literal in Exception
"EM102", # F-string in Exception
"FAST001", # redundant response_model
] 
unfixable = ["F401",  # Disable fix for unused imports (`F401`)
"ERA001", # commented-out code
]

[tool.ruff.lint.per-file-ignores]
"**/{tests,docs,tools}/*" = [
    "ANN201", # result type is not annotated
    "INP001", # no __init__ 
]
